--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
-    "@types/react-dom": "18.2.7", 
+    "@types/react-dom": "18.2.7",
+    "@prisma/client": "^5.10.2",
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -67,5 +68,8 @@
     "typescript": "5.2.2",
     "vaul": "^0.9.9",
     "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "prisma": "^5.10.2"
   }
 }
