--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
-    "@prisma/client": "^5.10.2",
+    "@next/swc-wasm-nodejs": "13.5.1",
+    "@prisma/client": "^6.7.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -38,27 +39,35 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@supabase/supabase-js": "^2.39.7",
     "@tailwindcss/postcss": "^4.1.8",
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
     "eslint": "8.49.0",
-    "eslint-config-next": "^14.1.0",
-    "framer-motion": "^11.0.8",
+    "eslint-config-next": "14.2.0",
+    "framer-motion": "^11.1.14",
     "input-otp": "^1.2.4",
+    "iron-session": "^8.0.4",
+    "jotai": "^2.12.4",
+    "jsonwebtoken": "^9.0.2",
+    "ky": "^1.8.1",
     "lucide-react": "^0.446.0",
-    "next": "^14.1.0",
+    "next": "15.3.0",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.3.0",
-    "postcss": "^8.4.30",
-    "react": "^18.2.0",
+    "papaparse": "^5.4.1",
+    "postcss": "8.4.30",
+    "react": "18.2.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18.2.0",
+    "react-dom": "18.2.0",
     "react-hook-form": "^7.53.0",
     "react-resizable-panels": "^2.1.3",
     "recharts": "^2.12.7",
@@ -66,11 +75,20 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.3.3",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.2.2",
     "vaul": "^0.9.9",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "react-dropzone": "^14.2.3",
+    "react-intersection-observer": "^9.8.1",
+    "simplex-noise": "^4.0.3",
+    "swr": "^2.3.3"
   },
   "devDependencies": {
-    "prisma": "^5.10.2"
+    "prisma": "^5.10.2",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/node": "20.6.2",
+    "@types/papaparse": "^5.3.14",
+    "@types/react": "18.2.22",
+    "@types/react-dom": "18.2.7",
+    "typescript": "5.8.2"
   }
 }
