--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -39,7 +41,8 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
-    "@supabase/supabase-js": "^2.39.7",
+    "@supabase/ssr": "^0.6.1",
+    "@supabase/supabase-js": "^2.50.2",
     "@tailwindcss/postcss": "^4.1.8",
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
@@ -68,27 +71,27 @@
     "react": "18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.53.0",
+    "react-intersection-observer": "^9.8.1",
     "react-resizable-panels": "^2.1.3",
     "recharts": "^2.12.7",
+    "simplex-noise": "^4.0.3",
     "sonner": "^1.5.0",
+    "swr": "^2.3.3",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.3.3",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
-    "zod": "^3.23.8",
-    "react-dropzone": "^14.2.3",
-    "react-intersection-observer": "^9.8.1",
-    "simplex-noise": "^4.0.3",
-    "swr": "^2.3.3"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "prisma": "^5.10.2",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "20.6.2",
     "@types/papaparse": "^5.3.14",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
+    "prisma": "^5.10.2",
     "typescript": "5.8.2"
   }
 }
