--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "bcryptjs": "^2.4.3",
     "embla-carousel-react": "^8.3.0",
     "eslint": "8.49.0",
     "eslint-config-next": "14.2.0",
@@ -61,6 +62,7 @@
     "iron-session": "^8.0.4",
     "jotai": "^2.12.4",
     "jsonwebtoken": "^9.0.2",
+    "js-cookie": "^3.0.5",
     "ky": "^1.8.1",
     "lucide-react": "^0.446.0",
     "next": "15.3.0",
@@ -86,6 +88,8 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/js-cookie": "^3.0.6",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "20.6.2",
     "@types/papaparse": "^5.3.14",
