--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@hookform/resolvers": "^3.9.0",
     "@next/swc-wasm-nodejs": "13.5.1",
     "@prisma/client": "^6.7.0",
+    "@ai-sdk/google": "^0.0.52",
+    "ai": "^3.4.32",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
